--- a/assignments/assignment1/index.html
+++ b/assignments/assignment1/index.html
@@ -10,9 +10,6 @@
       .message {
         font-size: 1.3em;
         font-weight: bold;
-        border:{{objColor}} solid;
-        color: {{objColor}};
-
       }
     </style>
   </head>
@@ -28,7 +25,7 @@
          <div class="form-group">
              <button ng-click="check()" class="btn btn-default">Check If Too Much</button>
          </div>
-         <div class="form-group message">
+         <div class="form-group message {{msgClass}}">
            <!-- Your message can go here. -->
            {{message}}
          </div>
